<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="5dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="127dp"
        android:layout_height="103dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:text="@string/personal_information"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="147dp"
        android:layout_height="19dp"
        android:text="@string/name"
        android:textColor="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName"
        android:textColor="#3F51B5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="147dp"
        android:layout_height="19dp"
        android:layout_marginTop="20dp"
        android:text="@string/surname"
        android:textColor="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_surname"
        android:inputType="textPersonName"
        android:textColor="#3F51B5"
        android:textColorLink="#3F51B5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="147dp"
        android:layout_height="19dp"
        android:layout_marginTop="20dp"
        android:text="@string/date_of_birth"
        android:textColor="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTextDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/hint_dob"
        android:textColor="#3F51B5" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="147dp"
        android:layout_height="19dp"
        android:layout_marginTop="20dp"
        android:text="@string/cellphone_number"
        android:textColor="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputCellNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/hint_cellphone"
        android:layout_marginBottom="20dp"
        android:textColor="#3F51B5" />


    <Button
        android:id="@+id/button_continue1"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:text="@string/btn_link_to_continue"
        android:textAllCaps="false"
        android:textColor="#FAF8F8"
        app:backgroundTint="@color/colorPrimary"
        app:iconTint="@color/colorPrimary" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/button_go_to_login"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        />

</LinearLayout>